# ai-test-demo

./: .gitignore  CMakeLists.txt  README.md  fragment.glsl  main.cpp  pbr.frag  vertex.glsl
assets/shaders/: sss.frag  sss.vert
src/: CMakeLists.txt
src/app/: DemoApp.cpp  DemoApp.h  main.cpp
src/core/: Buffer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sphere.h
src/loaders/: AssimpLoader.cpp  AssimpLoader.h
src/utils/: GLUtils.h
